--- a/src/media/Video.pug
+++ b/src/media/Video.pug
@@ -26,9 +26,8 @@ audio(bind:this={audio})
 
 style.
 	video
-		max-height 640px
-		max-width 854px
+		width 640px
+		height 360px
 		border 1px solid var(--black)
-		border-radius 1ch
 	audio
 		display none
