--- a/src/post/content/ImageContent.pug
+++ b/src/post/content/ImageContent.pug
@@ -3,18 +3,11 @@ script.
 	export content = {}
 
 {#if content.type === 'image'}
-	section.hide-scrollbar
+	section
 		{#each content.images as i}
 			figure
-				Image(image={i} maxH={640} maxW={640})
+				Image(image={i} maxW={640})
 				{#if i.caption}
 					figcaption {i.caption.t}
 						{#if i.caption.u}
 							a(href={i.caption.u}) {i.caption.u}
-
-style.
-	section
-		max-width 100%
-		overflow auto
-		gap 2rem
-		display flex
