--- a/src/shared/Flair.pug
+++ b/src/shared/Flair.pug
@@ -22,9 +22,10 @@ script.
 
 style.
 	span
-		padding 0px 5px
-		height 20px
+		padding 0px 4px
+		height 16px
 		display flex
+		align-items flex-end
 	:global(.flair-emoji)
-		height 20px
-		width 20px
+		height 16px
+		width 16px
