--- a/src/subreddit/SubredditFilterGroup.pug
+++ b/src/subreddit/SubredditFilterGroup.pug
@@ -82,7 +82,10 @@ form
 style.
 	form
 		position fixed
-		bottom 91vh
-		right 52%
+		top 0
+		right 50%
+		height 48px
 		background rgba(0,0,0,0.1)
-		padding 4px
+		display flex
+		align-items flex-end
+		display none
