--- a/src/user/Placard.pug
+++ b/src/user/Placard.pug
@@ -15,7 +15,12 @@ script.
 style.
 	.placard
 		display flex
+		align-items flex-end
 		font 10px 'Iosevka Aile Web'
+		a
+			text-decoration none
+			color inherit
+			margin-left 6px
 	.score
 		padding 0px 5px
 		background lightgray
