--- a/src/comment/CommentSection.pug
+++ b/src/comment/CommentSection.pug
@@ -3,8 +3,20 @@ script.
 	import MoreComments from './MoreComments.pug'
 	export comments = []
 
-{#each comments as comment}
-	Comment(comment={comment})
-	MoreComments(more={comment})
-{:else}
-	p [No comments.]
+section.hide-scrollbar
+	{#each comments as comment}
+		Comment(comment={comment})
+		MoreComments(more={comment})
+	{:else}
+		p [No comments.]
+
+style.
+	section
+		width 640px
+		position fixed
+		top 0
+		right 0
+		height 100vh
+		width 640px
+		overflow auto
+		padding 20px
