--- a/src/common.styl
+++ b/src/common.styl
@@ -7,6 +7,7 @@ body
 	height 100vh
 	// font
 	font 400 10pt/1.333 'Karla'
+	font 400 12px/1.2 'Iosevka Aile Web'
 	// word-spacing 0.25em
 	font-feature-settings 'kern'
 	-webkit-font-smoothing antialiased
@@ -29,6 +30,10 @@ body
 	color var(--black)
 a
 	color dodgerblue
+	text-decoration none
+	&:hover
+		background steelblue
+		color white
 address
 	font-style normal
 button
@@ -51,9 +56,6 @@ img
 video
 	box-sizing content-box
 .md
-	padding calc(1ch + 0.25em) 2ch
-	word-break break-word
-	overflow-wrap anywhere
 	.md-spoiler-text
 		background gray
 		color gray
@@ -61,7 +63,7 @@ video
 			background initial
 			color initial
 	& > * + *
-		margin-top 10pt
+		margin-top 1em
 	blockquote
 		margin 0
 		padding 0 1ch
