--- a/src/post/FeedPost.pug
+++ b/src/post/FeedPost.pug
@@ -9,7 +9,6 @@ script.
 {#if post instanceof Post}
 	.feed-post
 		.tags
-			span
 			{#if showFlair}
 				PostFlair(flair={post.titleFlair} subredditName={post.subredditName})
 			{:else}
@@ -17,6 +16,7 @@ script.
 		.title
 			{#if post.content.type === 'link'}
 				a(href={post.content.href}) {post.title}
+					span.domain ({post.domain})
 			{:else}
 				| {post.title}
 		.data
@@ -24,19 +24,12 @@ script.
 			span.time {post.createDate.ago().count}{post.createDate.ago().unit}
 
 style.
-	.feed-post
-		position relative
-		padding 1ch 2ch
-	.title
-		font-size 18px
+	.domain
+		font-size 10px
 	.tags
-		position absolute
-		top -3rem
-		width 100%
-		padding 0 2em
 		display flex
-		justify-content space-between
-		align-items flex-end
+		justify-content flex-end
+		text-align right
 	.data
 		font 400 10pt 'Iosevka Aile Web'
 		display flex
