--- a/src/post/Post.pug
+++ b/src/post/Post.pug
@@ -1,34 +1,12 @@
 script.
 	import CommentSection from '../comment/CommentSection.pug'
-	import EmbedContent from './content/EmbedContent.pug'
-	import ImageContent from './content/ImageContent.pug'
-	import LinkContent from './content/LinkContent.pug'
+	import ContentSection from './content/ContentSection.pug'
 	import Placard from '../user/Placard.pug'
-	import RedditContent from './content/RedditContent.pug'
-	import SelfContent from './content/SelfContent.pug'
-	import VideoContent from './content/VideoContent.pug'
 	import Post from './Post.coffee'
 	export post = {}
 
 {#if post instanceof Post}
 	article.hide-scrollbar
-		Placard(score={post.score} name={post.authorName} flair={post.authorFlair} subredditName={post.subredditName} role={post.authorRole})
-		{#key post.content}
-			EmbedContent(content={post.content})
-			ImageContent(content={post.content})
-			LinkContent(content={post.content})
-			RedditContent(content={post.content})
-			SelfContent(content={post.content})
-			VideoContent(content={post.content})
+		ContentSection(content={post.content})
 		{#await post.comments then comments}
 			CommentSection(comments={comments})
-
-style.
-	article
-		position fixed
-		top 0
-		left 50%
-		height 100vh
-		overflow auto
-		padding 10vh 0
-		width 856px
