--- a/src/channel/DestinationSearch.pug
+++ b/src/channel/DestinationSearch.pug
@@ -51,7 +51,7 @@ script.
 		query = query
 		
 {#if query.length > 0}
-	form.hide-scrollbar
+	form.hide-scroll
 		label#input Direct input
 			output {query.join('')}
 				button
