--- a/src/common.styl
+++ b/src/common.styl
@@ -52,9 +52,11 @@ ol, ul
 	list-style none
 p
 	margin 0
+iframe
+	display block
+	border 0
 img
-video
-	box-sizing content-box
+	display block
 .md
 	.md-spoiler-text
 		background gray
@@ -105,7 +107,7 @@ video
 	ul
 		list-style circle
 		padding-left 2em
-.hide-scrollbar
+.hide-scroll
 	scrollbar-width none
 	&::-webkit-scrollbar
 		display none
