--- a/src/content/VideoContent.pug
+++ b/src/content/VideoContent.pug
@@ -1,5 +1,5 @@
 script.
-	import Video from '../../media/Video.pug'
+	import Video from '../media/Video.pug'
 	export content = {}
 
 {#if content.type === 'video'}
