--- a/src/user/Placard.pug
+++ b/src/user/Placard.pug
@@ -1,5 +1,5 @@
 script.
-	import Flair from '../shared/Flair.pug'
+	import Flair from '../media/Flair.pug'
 	export score = {}
 	export name = ''
 	export flair = {}
