--- a/src/content/SelfContent.pug
+++ b/src/content/SelfContent.pug
@@ -2,8 +2,12 @@ script.
 	export content = {}
 
 {#if content.type === 'self'}
-	section.text
+	.text
 		{#if content.selftext}
 			| {@html content.selftext}
 		{:else}
-			p [No submission text.]
+			| [No submission text.]
+
+style.
+	.text
+		padding 1em
