--- a/src/post/PostFlair.pug
+++ b/src/post/PostFlair.pug
@@ -1,5 +1,5 @@
 script.
-	import Flair from '../shared/Flair.pug'
+	import Flair from '../media/Flair.pug'
 	export flair = {}
 	export subredditName = ''
 
