--- a/src/common.styl
+++ b/src/common.styl
@@ -65,12 +65,14 @@ img
 			background initial
 			color initial
 	& > * + *
-		margin-top 1em
+		margin 1em 0 0 0
 	blockquote
-		margin 0
-		padding 0 1ch
+		margin 0.5em 0 0 0
+		padding 1ch
 		border-left 3px solid gray
 		background gainsboro
+		& > * + *
+			margin-top 1em
 	code
 		font-weight bold
 		color red
