--- a/src/common.styl
+++ b/src/common.styl
@@ -29,6 +29,7 @@ body
 	background var(--white)
 	color var(--black)
 a
+	word-break break-all
 	color dodgerblue
 	text-decoration none
 	&:hover
@@ -58,6 +59,7 @@ iframe
 img
 	display block
 .md
+	word-break break-word
 	.md-spoiler-text
 		background gray
 		color gray
