--- a/src/comment/Comment.pug
+++ b/src/comment/Comment.pug
@@ -3,22 +3,29 @@ script.
 	import Placard from '../user/Placard.pug'
 	import Comment from './Comment.coffee'
 	export comment = {}
+	export depth = 0
 
 {#if comment instanceof Comment}
-	.comment
-		Placard(score={comment.score} name={comment.authorName} flair={comment.authorFlair} subredditName={comment.subredditName} role={comment.authorRole})
+	.comment(style='grid-template-columns: 4em {depth * 1}em 1fr')
+		.score(class:hidden={depth > 0}) {comment.score}
+		.indent o
 		{@html comment.content}
-		.replies
-			{#if comment.replies}
-				{#each comment.replies as reply}
-					svelte:self(comment={reply})
+	{#each comment.replies as reply}
+		svelte:self(comment={reply} depth={depth + 1})
 
 
 style.
 	.comment
-		margin-top 1em
-	:global(.replies > .comment)
-		margin-top 0.5em
-	.replies
-		padding-left 20px
-		border-left 1px solid lightgray
+		padding 1.5em
+		display grid
+		align-items flex-start
+		gap 1ch
+	.score
+		justify-self flex-end
+		padding 0 1ch
+		background lightgray
+		border-radius 1rem
+	.indent
+		justify-self flex-end
+	.hidden
+		visibility hidden
