--- a/src/common.styl
+++ b/src/common.styl
@@ -58,6 +58,10 @@ iframe
 	border 0
 img
 	display block
+iframe
+img
+video
+	border-radius 0.5em
 .md
 	word-break break-word
 	.md-spoiler-text
@@ -94,7 +98,7 @@ img
 		padding-left 2em
 	pre
 		display inline-block
-		white-space pre
+		white-space pre-wrap
 		padding 1ch
 		border 1px dashed red
 		overflow auto
