--- a/src/content/Content.pug
+++ b/src/content/Content.pug
@@ -18,8 +18,10 @@ article
 
 style.
 	article
-		padding 4em
-		border 1px solid
 		display flex
 		flex-flow column nowrap
 		align-items center
+		gap 0.5em
+		padding 0.5em 0
+		background var(--white)
+		border-radius 1em
