--- a/src/account/Account.pug
+++ b/src/account/Account.pug
@@ -4,23 +4,15 @@ script.
 {#if LS.userKey}
 	button(on:mousedown={() => logout()})
 		img.user-img(src={LS.userPic})
-		span {LS.userName}
 {:else}
-	button(on:mousedown={() => startLogin()})
-		span Log in
+	button(on:mousedown={() => startLogin()}) Log in
 
 style.
 	button
-		position fixed
-		top 1vw
-		right 1vw
 		height 48px
 		padding 2rem
-		border 1px solid
-		border-radius 1ch
 		display flex
 		align-items center
 	img
 		height 64px
 		width 64px
-		margin-right 2rem
