--- a/src/post/PostFlair.pug
+++ b/src/post/PostFlair.pug
@@ -10,6 +10,6 @@ script.
 style.
 	span
 		padding 0 1ch
-		border 1px solid rgba(0,0,0,0.5)
 		background white
 		color rgba(0,0,0,0.5)
+		border-radius 1rem
