--- a/src/feed/Feed.pug
+++ b/src/feed/Feed.pug
@@ -1,19 +1,37 @@
 script.
 	import FeedComment from './FeedComment.pug'
-	import FeedPost from './FeedPost.pug'
+	import Comments from '../comment/Comments.pug'
+	import Post from '../post/Post.pug'
 	import Comment from '../comment/Comment.coffee'
-	import Post from '../post/Post.coffee'
 	export items = []
-	export selectItem = -> {}
-	export selectedItem = {}
 	export showFlair = false
+	selectedItem = items[0]
+	selectItem = (item) -> selectedItem = item
+	selectTopmostItem = (e) ->
+		i = 0
+		while e.target.children[i].offsetTop < e.target.scrollTop
+			i += 1
+		if items[i] isnt selectedItem
+			selectItem(items[i])
 	totalComments = items.fold(0, (a, b) -> a + (b.commentCount or 0))
 	totalScore = items.fold(0, (a, b) -> a + (b.score or 0))
 
-ol
-	{#each items as item}
-		li
-			{#if item instanceof Post}
-				FeedPost(post={item} showFlair={showFlair} selected={item === selectedItem} select={selectItem})
-			{:else if item instanceof Comment}
-				FeedComment(comment={item} selected={item === selectedItem} select={selectItem})
+.feed
+	ol.hide-scroll(on:scroll={e => selectTopmostItem(e)})
+		{#each items as item}
+			li
+				Post(post={item} showFlair={showFlair} selected={item === selectedItem} select={selectItem})
+				{#if item instanceof Comment}
+					FeedComment(comment={item} selected={item === selectedItem} select={selectItem})
+	{#if selectedItem.comments}
+		{#await selectedItem.comments then comments}
+			Comments(comments={comments} commentCount={selectedItem.commentCount})
+
+style.
+	.feed
+		display grid
+		grid-template-columns 960px 1fr
+	ol
+		height 100vh
+		overflow auto
+		padding-bottom 80vh
